[package]
name = "rcon"
version = "0.1.0"
authors = ["trent <ghastfilms613@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
tokio = {version = "1", features = ["full"]}
dotenv = "0.15"
log = "0.4.14"
bytes = "1.1.0"
env_logger = "0.9.0"
async-trait = "0.1.51"
tokio-util = {version = "0.6.7", features = ["full"]}
rand = "0.8.4"
futures = "0.3.16"

anyhow = "1.0.43"
typemap = "0.3.3"