[package]
name = "rcon-rs"
version = "0.1.0"
authors = ["trent <ghastfilms613@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
default = ["client"]
full = ["client", "packet", "server"]
client = ["packet", "rand", "futures"]
server = ["packet", "anyhow", "typemap", "async-trait", "futures"]
packet = []

[dependencies]
tokio = {version = "1.12.0", features = ["net", "rt-multi-thread", "sync"]}
tokio-util = {version = "0.6.7", features = ["codec"]}
log = "0.4.14"
bytes = "1.1.0"
futures = {version = "0.3.16", optional = true}
async-trait = {version = "0.1.51", optional = true }

rand = {version = "0.8.4", optional = true}

typemap = {version = "0.3.3", optional = true}

anyhow = {version = "1.0.43", optional = true}