[package]
name = "rcon-rs"
version = "0.1.0"
authors = ["Jaymesv2 <ghastfilms613@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Simple Rcon implimentation"
repository = "https://github.com/Jaymesv2/rcon-rs"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[lib]

[features]
default = ["client"]
full = ["client"] #, "server"]
client = ["rand", "futures"]
#server = ["packet", "anyhow", "typemap", "async-trait", "futures"]

[dependencies]
tokio = {version = "1.12.0", features = ["net", "sync", "time"]}
tokio-util = {version = "0.6.7", features = ["codec"]}
log = "0.4.14"
bytes = "1.1.0"
futures = {version = "0.3.16", optional = true}
rand = {version = "0.8.4", optional = true}

#async-trait = {version = "0.1.51", optional = true }
#typemap = {version = "0.3.3", optional = true}

#anyhow = {version = "1.0.43", optional = true}

[dev-dependencies]
tokio = {version = "1.12.0", features = ["full"]}